Aasenv serialization (#306)
* Make aas database return IAssetAdministrationShells

* Implement serialization endpoint of aasenv

* Fix how multiple thumbnails are treated when there are multiple AASs

* Add tests for the serialization of AAS envs

* Fix errors after merge

* Fix linter errors

* Add creation of missing directory for tests

* Fix linter errors

* Format file

* Fix linter errors

* Consider comments

* Add failing test

* Add integration tests for AASX serialization download and handling

* Add additional integration tests for serialization endpoint of aas env

* Delete unnecessary tests

* Fix linter errors

* Add empty last lines

* Move file

* Refactor code based on comments

* Change context handling when nil

* Fix linter error

* Fix linter error

* Fix context handling when nil

* Add security route mapping and security integration tests for serialization

* Adds missing license headers

* Adresses review remarks

* fixes goFmt issues

---------
